uno-js/src/unoParser.js
// Generated from uno.g4 by ANTLR 4.13.1
// jshint ignore: start
import antlr4 from 'antlr4';
import unoListener from './unoListener.js';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class unoParser extends antlr4.Parser {

    static grammarFileName = "uno.g4";
    static literalNames = [ null, "'('", "')'", "','", "'.'", "'['", "']'", 
                            "'+'", "'-'", "'*'", "'/'", "'%'", null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, "'='", "'=='", "'<>'", "'!='", "'>'", 
                            "'>='", "'<'", "'<='" ];
    static symbolicNames = [ null, null, null, null, null, null, null, "T_ADD", 
                             "T_SUB", "T_MUL", "T_DIV", "T_MOD", "T_INT", 
                             "T_FLOAT", "T_STRING", "T_ON", "T_AND", "T_OR", 
                             "T_NOT", "T_IN", "T_TRUE", "T_FALSE", "T_COMPARE", 
                             "T_EQUAL", "T_EQUAL2", "T_NOTEQUAL", "T_NOTEQUAL2", 
                             "T_GREATER", "T_GREATEREQUAL", "T_LESS", "T_LESSEQUAL", 
                             "IDENTIFIER", "INTEGER_LIST", "INTEGER", "DECIMAL_LIST", 
                             "DECIMAL", "STRING_LIST", "STRING", "WS" ];
    static ruleNames = [ "start", "boolean_expression", "arithmetic_expression", 
                         "type_marker" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = unoParser.ruleNames;
        this.literalNames = unoParser.literalNames;
        this.symbolicNames = unoParser.symbolicNames;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 1:
    	    		return this.boolean_expression_sempred(localctx, predIndex);
    	case 2:
    	    		return this.arithmetic_expression_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    boolean_expression_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 9);
    		case 1:
    			return this.precpred(this._ctx, 8);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    arithmetic_expression_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 2:
    			return this.precpred(this._ctx, 13);
    		case 3:
    			return this.precpred(this._ctx, 12);
    		case 4:
    			return this.precpred(this._ctx, 11);
    		case 5:
    			return this.precpred(this._ctx, 10);
    		case 6:
    			return this.precpred(this._ctx, 9);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	start() {
	    let localctx = new StartContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, unoParser.RULE_start);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 8;
	        this.boolean_expression(0);
	        this.state = 9;
	        this.match(unoParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


	boolean_expression(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new Boolean_expressionContext(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 2;
	    this.enterRecursionRule(localctx, 2, unoParser.RULE_boolean_expression, _p);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 33;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,0,this._ctx);
	        switch(la_) {
	        case 1:
	            localctx = new CmpBooleanExpressionContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;

	            this.state = 12;
	            this.arithmetic_expression(0);
	            this.state = 13;
	            this.match(unoParser.T_COMPARE);
	            this.state = 14;
	            this.arithmetic_expression(0);
	            break;

	        case 2:
	            localctx = new NotBooleanExpressionContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 16;
	            this.match(unoParser.T_NOT);
	            this.state = 17;
	            this.boolean_expression(6);
	            break;

	        case 3:
	            localctx = new InBooleanExpressionContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 18;
	            this.arithmetic_expression(0);
	            this.state = 19;
	            this.match(unoParser.T_IN);
	            this.state = 20;
	            _la = this._input.LA(1);
	            if(!(((((_la - 32)) & ~0x1f) === 0 && ((1 << (_la - 32)) & 21) !== 0))) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            break;

	        case 4:
	            localctx = new NotInBooleanExpressionContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 22;
	            this.arithmetic_expression(0);
	            this.state = 23;
	            this.match(unoParser.T_NOT);
	            this.state = 24;
	            this.match(unoParser.T_IN);
	            this.state = 25;
	            _la = this._input.LA(1);
	            if(!(((((_la - 32)) & ~0x1f) === 0 && ((1 << (_la - 32)) & 21) !== 0))) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            break;

	        case 5:
	            localctx = new PlainBooleanExpressionContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 27;
	            this.match(unoParser.T__0);
	            this.state = 28;
	            this.boolean_expression(0);
	            this.state = 29;
	            this.match(unoParser.T__1);
	            break;

	        case 6:
	            localctx = new TrueBooleanExpressionContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 31;
	            this.match(unoParser.T_TRUE);
	            break;

	        case 7:
	            localctx = new FalseBooleanExpressionContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 32;
	            this.match(unoParser.T_FALSE);
	            break;

	        }
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 43;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,2,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                this.state = 41;
	                this._errHandler.sync(this);
	                var la_ = this._interp.adaptivePredict(this._input,1,this._ctx);
	                switch(la_) {
	                case 1:
	                    localctx = new AndBooleanExpressionContext(this, new Boolean_expressionContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, unoParser.RULE_boolean_expression);
	                    this.state = 35;
	                    if (!( this.precpred(this._ctx, 9))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 9)");
	                    }
	                    this.state = 36;
	                    this.match(unoParser.T_AND);
	                    this.state = 37;
	                    this.boolean_expression(10);
	                    break;

	                case 2:
	                    localctx = new OrBooleanExpressionContext(this, new Boolean_expressionContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, unoParser.RULE_boolean_expression);
	                    this.state = 38;
	                    if (!( this.precpred(this._ctx, 8))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 8)");
	                    }
	                    this.state = 39;
	                    this.match(unoParser.T_OR);
	                    this.state = 40;
	                    this.boolean_expression(9);
	                    break;

	                } 
	            }
	            this.state = 45;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,2,this._ctx);
	        }

	    } catch( error) {
	        if(error instanceof antlr4.error.RecognitionException) {
		        localctx.exception = error;
		        this._errHandler.reportError(this, error);
		        this._errHandler.recover(this, error);
		    } else {
		    	throw error;
		    }
	    } finally {
	        this.unrollRecursionContexts(_parentctx)
	    }
	    return localctx;
	}


	arithmetic_expression(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new Arithmetic_expressionContext(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 4;
	    this.enterRecursionRule(localctx, 4, unoParser.RULE_arithmetic_expression, _p);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 79;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,6,this._ctx);
	        switch(la_) {
	        case 1:
	            localctx = new RuntTimeFuncArithmeticExpressionContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;

	            this.state = 47;
	            this.match(unoParser.IDENTIFIER);
	            this.state = 48;
	            this.match(unoParser.T__0);
	            this.state = 49;
	            this.match(unoParser.T__1);
	            break;

	        case 2:
	            localctx = new FuncArithmeticExpressionContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 50;
	            this.match(unoParser.IDENTIFIER);
	            this.state = 51;
	            this.match(unoParser.T__0);
	            this.state = 52;
	            this.arithmetic_expression(0);
	            this.state = 57;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===3) {
	                this.state = 53;
	                this.match(unoParser.T__2);
	                this.state = 54;
	                this.arithmetic_expression(0);
	                this.state = 59;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 60;
	            this.match(unoParser.T__1);
	            break;

	        case 3:
	            localctx = new ColumnArithmeticExpressionContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 62;
	            this.match(unoParser.IDENTIFIER);
	            this.state = 64;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,4,this._ctx);
	            if(la_===1) {
	                this.state = 63;
	                this.type_marker();

	            }
	            break;

	        case 4:
	            localctx = new FieldColumnArithmeticExpressionContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 66;
	            this.match(unoParser.IDENTIFIER);
	            this.state = 67;
	            this.match(unoParser.T__3);
	            this.state = 68;
	            this.match(unoParser.IDENTIFIER);
	            this.state = 70;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,5,this._ctx);
	            if(la_===1) {
	                this.state = 69;
	                this.type_marker();

	            }
	            break;

	        case 5:
	            localctx = new StringArithmeticExpressionContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 72;
	            this.match(unoParser.STRING);
	            break;

	        case 6:
	            localctx = new IntegerArithmeticExpressionContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 73;
	            this.match(unoParser.INTEGER);
	            break;

	        case 7:
	            localctx = new DecimalArithmeticExpressionContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 74;
	            this.match(unoParser.DECIMAL);
	            break;

	        case 8:
	            localctx = new PlainArithmeticExpressionContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 75;
	            this.match(unoParser.T__0);
	            this.state = 76;
	            this.arithmetic_expression(0);
	            this.state = 77;
	            this.match(unoParser.T__1);
	            break;

	        }
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 98;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,8,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                this.state = 96;
	                this._errHandler.sync(this);
	                var la_ = this._interp.adaptivePredict(this._input,7,this._ctx);
	                switch(la_) {
	                case 1:
	                    localctx = new ModArithmeticExpressionContext(this, new Arithmetic_expressionContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, unoParser.RULE_arithmetic_expression);
	                    this.state = 81;
	                    if (!( this.precpred(this._ctx, 13))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 13)");
	                    }
	                    this.state = 82;
	                    this.match(unoParser.T_MOD);
	                    this.state = 83;
	                    this.arithmetic_expression(14);
	                    break;

	                case 2:
	                    localctx = new MulArithmeticExpressionContext(this, new Arithmetic_expressionContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, unoParser.RULE_arithmetic_expression);
	                    this.state = 84;
	                    if (!( this.precpred(this._ctx, 12))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 12)");
	                    }
	                    this.state = 85;
	                    this.match(unoParser.T_MUL);
	                    this.state = 86;
	                    this.arithmetic_expression(13);
	                    break;

	                case 3:
	                    localctx = new DivArithmeticExpressionContext(this, new Arithmetic_expressionContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, unoParser.RULE_arithmetic_expression);
	                    this.state = 87;
	                    if (!( this.precpred(this._ctx, 11))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 11)");
	                    }
	                    this.state = 88;
	                    this.match(unoParser.T_DIV);
	                    this.state = 89;
	                    this.arithmetic_expression(12);
	                    break;

	                case 4:
	                    localctx = new AddArithmeticExpressionContext(this, new Arithmetic_expressionContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, unoParser.RULE_arithmetic_expression);
	                    this.state = 90;
	                    if (!( this.precpred(this._ctx, 10))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 10)");
	                    }
	                    this.state = 91;
	                    this.match(unoParser.T_ADD);
	                    this.state = 92;
	                    this.arithmetic_expression(11);
	                    break;

	                case 5:
	                    localctx = new SubArithmeticExpressionContext(this, new Arithmetic_expressionContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, unoParser.RULE_arithmetic_expression);
	                    this.state = 93;
	                    if (!( this.precpred(this._ctx, 9))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 9)");
	                    }
	                    this.state = 94;
	                    this.match(unoParser.T_SUB);
	                    this.state = 95;
	                    this.arithmetic_expression(10);
	                    break;

	                } 
	            }
	            this.state = 100;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,8,this._ctx);
	        }

	    } catch( error) {
	        if(error instanceof antlr4.error.RecognitionException) {
		        localctx.exception = error;
		        this._errHandler.reportError(this, error);
		        this._errHandler.recover(this, error);
		    } else {
		    	throw error;
		    }
	    } finally {
	        this.unrollRecursionContexts(_parentctx)
	    }
	    return localctx;
	}



	type_marker() {
	    let localctx = new Type_markerContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, unoParser.RULE_type_marker);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 101;
	        this.match(unoParser.T__4);
	        this.state = 102;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 28672) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	        this.state = 103;
	        this.match(unoParser.T__5);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

unoParser.EOF = antlr4.Token.EOF;
unoParser.T__0 = 1;
unoParser.T__1 = 2;
unoParser.T__2 = 3;
unoParser.T__3 = 4;
unoParser.T__4 = 5;
unoParser.T__5 = 6;
unoParser.T_ADD = 7;
unoParser.T_SUB = 8;
unoParser.T_MUL = 9;
unoParser.T_DIV = 10;
unoParser.T_MOD = 11;
unoParser.T_INT = 12;
unoParser.T_FLOAT = 13;
unoParser.T_STRING = 14;
unoParser.T_ON = 15;
unoParser.T_AND = 16;
unoParser.T_OR = 17;
unoParser.T_NOT = 18;
unoParser.T_IN = 19;
unoParser.T_TRUE = 20;
unoParser.T_FALSE = 21;
unoParser.T_COMPARE = 22;
unoParser.T_EQUAL = 23;
unoParser.T_EQUAL2 = 24;
unoParser.T_NOTEQUAL = 25;
unoParser.T_NOTEQUAL2 = 26;
unoParser.T_GREATER = 27;
unoParser.T_GREATEREQUAL = 28;
unoParser.T_LESS = 29;
unoParser.T_LESSEQUAL = 30;
unoParser.IDENTIFIER = 31;
unoParser.INTEGER_LIST = 32;
unoParser.INTEGER = 33;
unoParser.DECIMAL_LIST = 34;
unoParser.DECIMAL = 35;
unoParser.STRING_LIST = 36;
unoParser.STRING = 37;
unoParser.WS = 38;

unoParser.RULE_start = 0;
unoParser.RULE_boolean_expression = 1;
unoParser.RULE_arithmetic_expression = 2;
unoParser.RULE_type_marker = 3;

class StartContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = unoParser.RULE_start;
    }

	boolean_expression() {
	    return this.getTypedRuleContext(Boolean_expressionContext,0);
	};

	EOF() {
	    return this.getToken(unoParser.EOF, 0);
	};

	enterRule(listener) {
	    if(listener instanceof unoListener ) {
	        listener.enterStart(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof unoListener ) {
	        listener.exitStart(this);
		}
	}


}



class Boolean_expressionContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = unoParser.RULE_boolean_expression;
    }


	 
		copyFrom(ctx) {
			super.copyFrom(ctx);
		}

}


class CmpBooleanExpressionContext extends Boolean_expressionContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	arithmetic_expression = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(Arithmetic_expressionContext);
	    } else {
	        return this.getTypedRuleContext(Arithmetic_expressionContext,i);
	    }
	};

	T_COMPARE() {
	    return this.getToken(unoParser.T_COMPARE, 0);
	};

	enterRule(listener) {
	    if(listener instanceof unoListener ) {
	        listener.enterCmpBooleanExpression(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof unoListener ) {
	        listener.exitCmpBooleanExpression(this);
		}
	}


}

unoParser.CmpBooleanExpressionContext = CmpBooleanExpressionContext;

class NotBooleanExpressionContext extends Boolean_expressionContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	T_NOT() {
	    return this.getToken(unoParser.T_NOT, 0);
	};

	boolean_expression() {
	    return this.getTypedRuleContext(Boolean_expressionContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof unoListener ) {
	        listener.enterNotBooleanExpression(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof unoListener ) {
	        listener.exitNotBooleanExpression(this);
		}
	}


}

unoParser.NotBooleanExpressionContext = NotBooleanExpressionContext;

class PlainBooleanExpressionContext extends Boolean_expressionContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	boolean_expression() {
	    return this.getTypedRuleContext(Boolean_expressionContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof unoListener ) {
	        listener.enterPlainBooleanExpression(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof unoListener ) {
	        listener.exitPlainBooleanExpression(this);
		}
	}


}

unoParser.PlainBooleanExpressionContext = PlainBooleanExpressionContext;

class OrBooleanExpressionContext extends Boolean_expressionContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	boolean_expression = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(Boolean_expressionContext);
	    } else {
	        return this.getTypedRuleContext(Boolean_expressionContext,i);
	    }
	};

	T_OR() {
	    return this.getToken(unoParser.T_OR, 0);
	};

	enterRule(listener) {
	    if(listener instanceof unoListener ) {
	        listener.enterOrBooleanExpression(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof unoListener ) {
	        listener.exitOrBooleanExpression(this);
		}
	}


}

unoParser.OrBooleanExpressionContext = OrBooleanExpressionContext;

class TrueBooleanExpressionContext extends Boolean_expressionContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	T_TRUE() {
	    return this.getToken(unoParser.T_TRUE, 0);
	};

	enterRule(listener) {
	    if(listener instanceof unoListener ) {
	        listener.enterTrueBooleanExpression(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof unoListener ) {
	        listener.exitTrueBooleanExpression(this);
		}
	}


}

unoParser.TrueBooleanExpressionContext = TrueBooleanExpressionContext;

class AndBooleanExpressionContext extends Boolean_expressionContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	boolean_expression = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(Boolean_expressionContext);
	    } else {
	        return this.getTypedRuleContext(Boolean_expressionContext,i);
	    }
	};

	T_AND() {
	    return this.getToken(unoParser.T_AND, 0);
	};

	enterRule(listener) {
	    if(listener instanceof unoListener ) {
	        listener.enterAndBooleanExpression(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof unoListener ) {
	        listener.exitAndBooleanExpression(this);
		}
	}


}

unoParser.AndBooleanExpressionContext = AndBooleanExpressionContext;

class NotInBooleanExpressionContext extends Boolean_expressionContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	arithmetic_expression() {
	    return this.getTypedRuleContext(Arithmetic_expressionContext,0);
	};

	T_NOT() {
	    return this.getToken(unoParser.T_NOT, 0);
	};

	T_IN() {
	    return this.getToken(unoParser.T_IN, 0);
	};

	INTEGER_LIST() {
	    return this.getToken(unoParser.INTEGER_LIST, 0);
	};

	STRING_LIST() {
	    return this.getToken(unoParser.STRING_LIST, 0);
	};

	DECIMAL_LIST() {
	    return this.getToken(unoParser.DECIMAL_LIST, 0);
	};

	enterRule(listener) {
	    if(listener instanceof unoListener ) {
	        listener.enterNotInBooleanExpression(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof unoListener ) {
	        listener.exitNotInBooleanExpression(this);
		}
	}


}

unoParser.NotInBooleanExpressionContext = NotInBooleanExpressionContext;

class FalseBooleanExpressionContext extends Boolean_expressionContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	T_FALSE() {
	    return this.getToken(unoParser.T_FALSE, 0);
	};

	enterRule(listener) {
	    if(listener instanceof unoListener ) {
	        listener.enterFalseBooleanExpression(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof unoListener ) {
	        listener.exitFalseBooleanExpression(this);
		}
	}


}

unoParser.FalseBooleanExpressionContext = FalseBooleanExpressionContext;

class InBooleanExpressionContext extends Boolean_expressionContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	arithmetic_expression() {
	    return this.getTypedRuleContext(Arithmetic_expressionContext,0);
	};

	T_IN() {
	    return this.getToken(unoParser.T_IN, 0);
	};

	INTEGER_LIST() {
	    return this.getToken(unoParser.INTEGER_LIST, 0);
	};

	STRING_LIST() {
	    return this.getToken(unoParser.STRING_LIST, 0);
	};

	DECIMAL_LIST() {
	    return this.getToken(unoParser.DECIMAL_LIST, 0);
	};

	enterRule(listener) {
	    if(listener instanceof unoListener ) {
	        listener.enterInBooleanExpression(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof unoListener ) {
	        listener.exitInBooleanExpression(this);
		}
	}


}

unoParser.InBooleanExpressionContext = InBooleanExpressionContext;

class Arithmetic_expressionContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = unoParser.RULE_arithmetic_expression;
    }


	 
		copyFrom(ctx) {
			super.copyFrom(ctx);
		}

}


class PlainArithmeticExpressionContext extends Arithmetic_expressionContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }
